fixed css on leaders to be more responsive made the header dynamic on login (still issue on refresh) added auth interceptor fixed register css font too small

--- a/src/app/components/register/register.component.css
+++ b/src/app/components/register/register.component.css
@@ -6,7 +6,7 @@
  }
 
  .form-group, .form-control {
-     font-size: .7rem !important;
+     font-size: 1rem !important;
  }
 
  .ng-touched.ng-invalid:not(form):not(.form-group) {
